timer view model added

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.mi_clock">
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
+<uses-permission android:name="android.permission.WAKE_LOCK"/>
+<!-- For apps with targetSDK=31 (Android 12) -->
+<uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM"/>
    <application
         android:label="mi_clock"
         android:name="${applicationName}"
@@ -30,5 +34,6 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
+    
     </application>
 </manifest>
