--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   #Background Service
   flutter_local_notifications: ^9.4.1
   workmanager: ^0.4.1
+  just_audio_background: ^0.0.1-beta.5
   #State Management
   provider: ^6.0.2
   stacked: ^2.3.3
