--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,7 +46,8 @@ dependencies:
   #Ui
   numberpicker: ^2.1.1
   stop_watch_timer: ^1.4.0
-
+  #Test
+  device_preview: ^1.0.0
 dev_dependencies:
   flutter_lints: ^1.0.0
   hive_generator: ^1.1.2
